--- a/src/app.scss
+++ b/src/app.scss
@@ -102,7 +102,7 @@ $modal-background-background-color-dark: rgba($dark, 0.86) !default; // remove t
 
 .modal-card-body {
   // remove this once https: //github.com/jloh/bulma-prefers-dark/pull/90 is merged and released
-  background-color: $background-dark;
+  background-color: #3e8ed0;
 }
 
 /* Support for copy code button */
@@ -145,4 +145,7 @@ $modal-background-background-color-dark: rgba($dark, 0.86) !default; // remove t
   .dropdown-menu {
     width: 100%;
   }
+}
+.field-label .label{
+  color:#fff;
 }
